Added to each chapter to allow individual knitting. Version sent to Nic and Inge for feedback.

--- a/index/00-abbreviations.Rmd
+++ b/index/00-abbreviations.Rmd
@@ -3,6 +3,7 @@
 library(readxl)
 library(tidyr)
 library(kableExtra)
+install.packages("knitr")
 library(knitr)
 abbreviations <- read_xlsx("figure/Abbreviations/Abbreviations.xlsx")
 abbreviations <- abbreviations[order(abbreviations$Abbreviation),]
