Added more points to conclusion

--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -32,7 +32,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Discussion
 
 ## Overall findings
-The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma protoeme and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in summary Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings).
+The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma proteome and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in summary Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings).
 
 ```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored", fig.scap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers"}
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
@@ -76,6 +76,7 @@ Chapter 8
 - Utilise bariatric surgery data as a third line of evidence to explore effect of BMI/weight loss on the plasma proteome. Bring in that this will be performed as part of the transition fellowship.
 - Work on proteomic networks to really determine key proteins in disease - this leads onto the transition fellowship.
 - Instrument groups of proteins
+- Two sample MR of proteins of interest to immature platelet count - .
 
 ## Wider implications of findings (e.g. clinical)
 
